--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -9,9 +9,18 @@
                     <input class="form-control" id="eventName" placeholder="Beach Bonfire">
                 </div>
                 <div class="mb-3">
-                    <label for="location" class="form-label">Location</label>
+                    <label for="location" class="form-label">Address</label>
                     <input class="form-control" id="location" placeholder="Golden Gardens">
                 </div>
+                <div class="mb-3">
+                    <label for="city" class="form-label">City</label>
+                    <input class="form-control" id="city" placeholder="Seattle">
+                </div>
+                <div class="mb-3">
+                    <label for="state" class="form-label">State</label>
+                    <input class="form-control" id="state" placeholder="WA">
+                </div>
+
                 <div>
                     <img id="uploadedimage" src=""></img>
                 </div>
@@ -64,5 +73,8 @@
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <!-- jQuery UI <script> tag -->
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 <script src="/js/createEvent.js"></script>
