--- a/views/test.html
+++ b/views/test.html
@@ -38,7 +38,12 @@
     </header>
 
     <main class="container container-fluid mt-5">
-
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-6 border mt-4">
+                <h1 class="text-center mt-5 mb-2">401 Unauthorized Access</h1>
+                <h5 class="text-center mb-5">Please log in to continue</h5>
+            </div>
+        </div>
     </main>
 
     <footer>
