--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,7 +12,7 @@
                     <label for="floatingPassword">Password</label>
                 </div>
                 <div class="d-grid gap-2 my-3">
-                    <button class="btn btn-dark" id="signupBtn">Log In</button>
+                    <button class="btn btn-dark" id="signupBtn">Sign uo</button>
                 </div>
             </form>
         </div>
