--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -13,7 +13,7 @@
                     <input class="form-control" id="location" value="{{eventUpdate.location}}">
                 </div>
              <div>
-                    <img id="uploadedimage" src={{eventUpdate.picture_path}}></img>
+                    <img id="uploadedimage" src={{eventUpdate.picture_path}} width="500" height="360"></img>
                 </div>
                 <div class="mb-3">
                     <button for="formFile" id="upload_widget" class="form-label, cloudinary-button">Upload
