--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,8 +9,7 @@
                         Public Events</a></button>
                 <button class="btn btn-dark m-3"><a href="#privateEvents" class="text-reset text-decoration-none">My
                         Private Events</a></button>
-                <button class="btn btn-dark m-3"><a href="#invitedEvents" class="text-reset text-decoration-none">My
-                        Invited Events</a></button>
+                <button class="btn btn-dark m-3"><a href="#invitedEvents" class="text-reset text-decoration-none">Event Invitations</a></button>
             </div>
         </div>
     </div>
