--- a/views/searchResult.handlebars
+++ b/views/searchResult.handlebars
@@ -1,3 +1,4 @@
+
 <div class="row">
     <div class="col">
         <h1>Upcoming Events in {{state}}</h1>
@@ -25,3 +26,4 @@
     </div>
     {{/each}}
 </div>
+<script src="/js/search.js"></script>
