--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -8,7 +8,7 @@
                     <label for="eventName" class="form-label">Event Name</label>
                     <input class="form-control" id="eventName" value="{{eventUpdate.event_name}}">
                 </div>
-               <div class="mb-3">
+                <div class="mb-3">
                     <label for="location" class="form-label">Address</label>
                     <input class="form-control" id="location" value="{{eventUpdate.location}}">
                 </div>
@@ -20,7 +20,7 @@
                     <label for="state" class="form-label">State</label>
                     <input class="form-control" id="state" value="{{eventUpdate.state}}">
                 </div>
-             <div>
+                <div>
                     <img id="uploadedimage" src={{eventUpdate.picture_path}} width="500" height="360"></img>
                 </div>
                 <div class="mb-3">
@@ -28,90 +28,73 @@
                         Image</button>
                 </div>
 
-                {{!-- <div class="row mb-3">
-                    <div class="col">
-                        <label for="startDate" class="form-label">Start Date</label>
-                        <input type="text" class="form-control" value="{{format_time eventUpdate.start_time}}"
-                            aria-label="startDate" id="startDate">
-                    </div>--}}
-                    <div class="row mb-3" <div class="col">
-                        <label for="startTime" class="form-label">Start Time</label>
-                        <input type="datetime-local" class="form-control" temp="{{eventUpdate.start_time}}"
-                            value="" aria-label="startTime" id="startTime">
-                    </div>
-                    {{!--
-                    <div class="row mb-3">
-                        <div class="col">
-                            <label for="endDate" class="form-label">End Date</label>
-                            <input type="text" class="form-control" placeholder="Click to select" aria-label="endDate"
-                                id="endDate">
-                        </div> --}}
-                        <div class="col">
-                            <label for="endTime" class="form-label">End Time</label>
-                            <input type="datetime-local" class="form-control" value="{{format_time eventUpdate.end_time}}"
-                                aria-label="endTime" id="endTime">
-                        </div>
-                    </div>
+                <div class="row mb-3">
+                    <label for="startTime" class="form-label">Start Time</label>
+                    <input type="datetime-local" class="form-control" value="{{format_time_value eventUpdate.end_time}}"
+                        value="" aria-label="startTime" id="startTime">
+                </div>
 
-                    <div class="mb-3">
-                        <label for="backpackItems" class="form-label">Backpack Items</label>
-                        
-                        <ul>
-                            {{#eventUpdate.items}}
-                            <li>
-
-                                {{item_name}}
-
-                                {{!-- <button class="deleteItem" value={{id}} name={{event_id}}> --}}
-                                    <img class="deleteItem" src="/images/close_cross_icon.png" value={{id}}
-                                        name={{event_id}} width="3%" height="3%">
-                                    {{!-- </img> --}}
-                            </li>
-                            {{/eventUpdate.items}}
-                        </ul>
-                       
-
-                        <div class="mb-3">
-                            <label for="newItem" class="form-label">New Item</label>
-                            <input class="form-control" id="newItem">
-                            <button class="newItemBtn" value={{eventUpdate.creator_id}} name={{eventUpdate.id}}> Add
-                                Item
-                            </button>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="eventType" class="form-label">Event Type</label>
-                        <div>
-
-                            {{#if eventUpdate.public}}
-                            {{eventUpdate.public}}
-                            <input type="radio" name="eventType" value="1" id="public" checked="checked">
-                            <label for="public">Public </label>
-                            <input type="radio" name="eventType" value="0" id="private">
-                            <label for="private">Private</label>
-                            {{else}}
-                            <h1>test</h1>
-                            <input type="radio" name="eventType" value="1" id="public">
-                            <label for="public">Public </label>
-                            <input type="radio" name="eventType" value="0" id="private" checked="checked">
-                            <label for="private">Private</label>
-                            {{/if}}
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="startDate" class="form-label">Event Description</label>
-                        <textarea class="form-control" id="eventDescription" rows="6"
-                            placeholder="More details...">{{eventUpdate.description}}</textarea>
-                    </div>
-
-                    <div class="d-grid gap-2 my-3">
-                        <button type="button" class="btn btn-dark" id="updateEventSubmit"
-                            value={{eventUpdate.id}}>Update</button>
-                    </div>
-            </form>
+                <div class="row mb-3">
+                    <label for="endTime" class="form-label">End Time</label>
+                    <input type="datetime-local" class="form-control" value="{{format_time_value eventUpdate.end_time}}"
+                        aria-label="endTime" id="endTime">
+                </div>
         </div>
+
+        <div class="mb-3">
+            <label for="backpackItems" class="form-label">Backpack Items</label>
+
+            <ul>
+                {{#eventUpdate.items}}
+                <li>
+                    {{item_name}}
+                    <img class="deleteItem" src="/images/close_cross_icon.png" value={{id}} name={{event_id}} width="3%"
+                        height="3%">
+                </li>
+                {{/eventUpdate.items}}
+            </ul>
+
+
+            <div class="mb-3">
+                <label for="newItem" class="form-label">New Item</label>
+                <input class="form-control" id="newItem">
+                <button class="newItemBtn" value={{eventUpdate.creator_id}} name={{eventUpdate.id}}> Add
+                    Item
+                </button>
+            </div>
+        </div>
+        <div>
+            <label for="eventType" class="form-label">Event Type</label>
+            <div>
+
+                {{#if eventUpdate.public}}
+                {{eventUpdate.public}}
+                <input type="radio" name="eventType" value="1" id="public" checked="checked">
+                <label for="public">Public </label>
+                <input type="radio" name="eventType" value="0" id="private">
+                <label for="private">Private</label>
+                {{else}}
+                <h1>test</h1>
+                <input type="radio" name="eventType" value="1" id="public">
+                <label for="public">Public </label>
+                <input type="radio" name="eventType" value="0" id="private" checked="checked">
+                <label for="private">Private</label>
+                {{/if}}
+            </div>
+        </div>
+
+        <div class="mb-3">
+            <label for="startDate" class="form-label">Event Description</label>
+            <textarea class="form-control" id="eventDescription" rows="6"
+                placeholder="More details...">{{eventUpdate.description}}</textarea>
+        </div>
+
+        <div class="d-grid gap-2 my-3">
+            <button type="button" class="btn btn-dark" id="updateEventSubmit" value={{eventUpdate.id}}>Update</button>
+        </div>
+        </form>
     </div>
+</div>
 </div>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 <script src="/js/updateEvent.js"></script>
