set default time min time

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -22,7 +22,7 @@
                 </div>
 
                 <div>
-                    <img id="uploadedimage" src="" width="500" height="360"></img>
+                    <img id="uploadedimage" src="/images/BYOB_Logo_Crop.png" width="500" height="360"></img>
                 </div>
                 <div class="mb-3">
                     <button for="formFile" id="upload_widget" class="form-label, cloudinary-button">Upload
