change place holder for address

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -10,7 +10,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="location" class="form-label">Address</label>
-                    <input class="form-control" id="location" placeholder="Golden Gardens">
+                    <input class="form-control" id="location" placeholder="123 Fake St. NE">
                 </div>
                 <div class="mb-3">
                     <label for="city" class="form-label">City</label>
