--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -24,7 +24,7 @@
             <hr>
             <div class="row">
                 <div class="d-flex justify-content-center mb-2">
-                    <a class="text-center link-dark" href="https://maps.google.com/?q={{location}},{{city}},{{state}}"
+                    <a class="text-center link-dark" href="https://maps.google.com/?q={{location}},+{{city}},+{{state}}"
                         target="_blank">{{location}}<br>{{city}}, {{state}}</a>
                 </div>
                 <div class="mb-2">
@@ -92,7 +92,7 @@
                 <div class="mb-2">
                     <div class="d-flex justify-content-center mb-2">
                         <a class="text-center link-dark"
-                            href="https://maps.google.com/?q={{location}},{{city}},{{state}}"
+                            href="https://maps.google.com/?q={{location}},+{{city}},+{{state}}"
                             target="_blank">{{location}}<br>{{city}}, {{state}}</a>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                 <div class="mb-2">
                     <div class="d-flex justify-content-center mb-2">
                         <a class="text-center link-dark"
-                            href="https://maps.google.com/?q={{location}},{{city}},{{state}}"
+                            href="https://maps.google.com/?q={{location}},+{{city}},+{{state}}"
                             target="_blank">{{location}}<br>{{city}}, {{state}}</a>
                     </div>
                 </div>
