--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -96,5 +96,8 @@
     </div>
 </div>
 </div>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<!-- jQuery UI <script> tag -->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 <script src="/js/updateEvent.js"></script>
