--- a/views/invite.handlebars
+++ b/views/invite.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col">
-        <h1>Invite Users to your <a class="link-info text-reset"
+        <h1>Invite people to your <a class="link-info text-reset"
                 href="/eventbyid/{{curEvent.id}}">{{curEvent.event_name}}</a> Event</h1>
     </div>
 </div>
