--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,4 +39,12 @@
     #profile-btns {
         flex-direction: column;
     }
+    #cust-detail {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    /* #cust-img {
+
+    } */
 }
