--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -1,3 +1,4 @@
+{{!-- change password page --}}
 <div class="row d-flex justify-content-center">
     <div class="card col-12 col-md-5 col-lg-4 my-5 mx-5">
         <div class="card-body">
@@ -17,10 +18,10 @@
                 </div>
                 <div class="d-grid gap-2 my-3">
                     <button class="btn btn-dark" id="newPassBtn" value={{user.id}}>Change Password</button>
-                    
+
                 </div>
                 <div class="d-grid gap-2 my-3">
-                    <button class="btn btn-dark" id="cancelpass"  >Cancel</button>
+                    <button class="btn btn-dark" id="cancelpass">Cancel</button>
                 </div>
             </form>
         </div>
