--- a/views/invite.handlebars
+++ b/views/invite.handlebars
@@ -1,3 +1,4 @@
+{{!-- invite user to event page --}}
 <div class="row">
     <div class="col">
         <h1>Invite people to your <a class="link-info text-reset"
