--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,4 @@
+{{!-- profile page --}}
 <div class="row d-flex justify-content-center">
     <div class="card col-12 my-5">
         <div class="card-body">
@@ -198,85 +199,3 @@
     {{/each}}
 </div>
 <script src="/js/eventAction.js"></script>
-
-{{!-- <h1>My Public Events</h1>
-{{#each publicEvents as |event|}}
-<div>
-    <div>
-        <div class=" ">
-            <h3> {{event.event_name}}</h3>
-        </div>
-        <div>
-            Created by:
-            {{event.creator.user_name}}
-        </div>
-        <div>
-            Items:
-            {{#items}}
-            <ul>
-                <li>{{item_name}}</li>
-            </ul>
-            {{/items}}
-        </div>
-        <div>
-            Attendee:
-            {{#attendees}}
-            <ul>
-                <li>{{user_name}}</li>
-            </ul>
-            {{/attendees}}
-        </div>
-    </div>
-    <div>
-        {{event.location}}
-    </div>
-    {{event.event_name}}
-    {{event.id}}
-    <button class="deleteBtn" value={{event.id}}>Delete</button>
-    <button class="updateBtn" value={{event.id}}>update</button>
-    <button class="privBtn" value={{event.id}}>Make Private</button>
-    <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
-</div>
-{{/each}}
-<hr>
-<hr>
-<h1>Private Events</h1>
-{{#each privateEvents as |event|}}
-<div>
-    <div>
-        <div class=" ">
-            <h3> {{event.event_name}}</h3>
-        </div>
-        <div>
-            Created by:
-            {{event.creator.user_name}}
-        </div>
-        <div>
-            Items:
-            {{#items}}
-            <ul>
-                <li>{{item_name}}</li>
-
-            </ul>
-            {{/items}}
-        </div>
-        <div>
-            Attendee:
-            {{#attendees}}
-            <ul>
-                <li>{{user_name}}</li>
-            </ul>
-            {{/attendees}}
-        </div>
-    </div>
-    <div>
-        {{event.location}}
-    </div>
-    {{event.event_name}}
-    {{event.id}}
-    <button class="deleteBtn" value={{event.id}}>Delete</button>
-    <button class="updateBtn" value={{event.id}}>update</button>
-    <button class="pubBtn" value={{event.id}}>Make Public</button>
-    <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
-</div>
-{{/each}} --}}
