--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+{{!-- home page --}}
 <div class="row">
     <div class="col">
         <h1>Upcoming Events</h1>
@@ -18,7 +19,8 @@
             <h2 class="card-title  mt-2 mb-3 text-center">{{event_name}}</h2>
             <h5 class="text-center">{{format_time start_time}}</h5>
             <div class="d-flex justify-content-center">
-                <a class="text-center link-dark" href="https://maps.google.com/?q={{location}},+{{city}},+{{state}}" target="_blank">{{location}}<br>{{city}}, {{state}}</a>
+                <a class="text-center link-dark" href="https://maps.google.com/?q={{location}},+{{city}},+{{state}}"
+                    target="_blank">{{location}}<br>{{city}}, {{state}}</a>
             </div>
             <div class="d-grid gap-2 mt-3 mb-1">
                 <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
