--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,3 +1,4 @@
+{{!-- signup page --}}
 <div class="row d-flex justify-content-center">
     <div class="card col-12 col-md-5 col-lg-4 my-5 mx-5">
         <div class="card-body">
