--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -17,11 +17,11 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="publicEvents">My Public Events</h1>
     {{#each publicEvents as |event|}}
-    <div class="card col-12 col-lg-5 mb-3 mx-3">
+    <div class="card col-12 col-lg-5 mb-3 mx-3 hover-target">
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
-            <img src={{picture_path}} class="card-img-top" width="500" height="360" alt={{picture_path}}>
+            <img src={{picture_path}} class="card-img-top img-fluid" width="500" height="360" alt={{picture_path}}>
             <hr>
             <div class="row">
                 <div class="d-flex justify-content-center mb-2">
@@ -37,45 +37,46 @@
                     <p class="d-inline">{{format_time end_time}}</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col border m-2 p-2">
-                    <h5>Backpack:</h5>
-                    <ul>
-                        {{#each items}}
-                        <li>{{item_name}}</li>
-                        {{/each}}
-                    </ul>
-                </div>
-                <div class="col border m-2 p-2">
-                    <h5>Attendees:</h5>
-                    <ul>
-                        {{#each yeses}}
-                        <li>{{user_name}}</li>
-                        {{/each}}
-                    </ul>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="d-grid gap-2 my-3">
-                        <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
-                        <button class="btn btn-dark m-1 privBtn" value={{event.id}}>Make Private</button>
+            <div class="hover-show">
+                <div class="row">
+                    <div class="col border m-2 p-2">
+                        <h5>Backpack:</h5>
+                        <ul>
+                            {{#each items}}
+                            <li>{{item_name}}</li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                    <div class="col border m-2 p-2">
+                        <h5>Attendees:</h5>
+                        <ul>
+                            {{#each yeses}}
+                            <li>{{user_name}}</li>
+                            {{/each}}
+                        </ul>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="d-grid gap-2 my-3">
-                        <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
-                        <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="d-grid gap-2 my-3">
+                            <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
+                            <button class="btn btn-dark m-1 privBtn" value={{event.id}}>Make Private</button>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="d-grid gap-2 my-3">
+                            <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
+                            <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="d-grid gap-2 mb-3">
+                        <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="d-grid gap-2 mb-3">
-                    <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
-                </div>
-            </div>
-
         </div>
     </div>
     {{/each}}
@@ -83,13 +84,13 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="privateEvents">My Private Events</h1>
     {{#each privateEvents as |event|}}
-    <div class="card col-12 col-lg-5 mb-3 mx-3">
+    <div class="card col-12 col-lg-5 mb-3 mx-3 hover-target">
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
-            <img src={{picture_path}} class="card-img-top" width="500" height="360" alt={{picture_path}}>
+            <img src={{picture_path}} class="card-img-top img-fluid" width="500" height="360" alt={{picture_path}}>
             <hr>
-            <div class="row mb-3">
+            <div class="row">
                 <div class="mb-2">
                     <div class="d-flex justify-content-center mb-2">
                         <a class="text-center link-dark"
@@ -106,43 +107,44 @@
                     <p class="d-inline">{{format_time end_time}}</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col border m-2 p-2">
-                    <h5>Backpack:</h5>
-                    <ul>
-                        {{#each items}}
-                        <li>{{item_name}}</li>
-                        {{/each}}
-                    </ul>
-                </div>
-                <div class="col border m-2 p-2">
-                    <h5>Attendees:</h5>
-                    <ul>
-                        {{#each yeses}}
-                        <li>{{user_name}}</li>
-                        {{/each}}
-                    </ul>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="d-grid gap-2 my-3">
-                        <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
-                        <button class="btn btn-dark m-1 pubBtn" value={{event.id}}>Make Public</button>
+            <div class="hover-show">
+                <div class="row">
+                    <div class="col border m-2 p-2">
+                        <h5>Backpack:</h5>
+                        <ul>
+                            {{#each items}}
+                            <li>{{item_name}}</li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                    <div class="col border m-2 p-2">
+                        <h5>Attendees:</h5>
+                        <ul>
+                            {{#each yeses}}
+                            <li>{{user_name}}</li>
+                            {{/each}}
+                        </ul>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="d-grid gap-2 my-3">
-                        <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
-                        <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="d-grid gap-2 my-3">
+                            <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
+                            <button class="btn btn-dark m-1 pubBtn" value={{event.id}}>Make Public</button>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="d-grid gap-2 my-3">
+                            <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
+                            <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
+                        </div>
                     </div>
                 </div>
+                <div class="row">
+                    <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
+                </div>
             </div>
-            <div class="row">
-                <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
-            </div>
-
         </div>
     </div>
     {{/each}}
@@ -150,11 +152,11 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="invitedEvents">Event Invites</h1>
     {{#each invitedEvents as |event|}}
-    <div class="card col-12 col-lg-5 mb-3 mx-3">
+    <div class="card col-12 col-lg-5 mb-3 mx-3 hover-target">
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
-            <img src={{picture_path}} class="card-img-top" width="500" height="360" alt={{picture_path}}>
+            <img src={{picture_path}} class="card-img-top img-fluid" width="500" height="360" alt={{picture_path}}>
             <hr>
             <div class="row mb-3">
                 <div class="mb-2">
@@ -173,26 +175,28 @@
                     <p class="d-inline">{{format_time end_time}}</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col border m-2 p-2">
-                    <h5>Backpack:</h5>
-                    <ul>
-                        {{#each items}}
-                        <li>{{item_name}}</li>
-                        {{/each}}
-                    </ul>
+            <div class="hover-show">
+                <div class="row">
+                    <div class="col border m-2 p-2">
+                        <h5>Backpack:</h5>
+                        <ul>
+                            {{#each items}}
+                            <li>{{item_name}}</li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                    <div class="col border m-2 p-2">
+                        <h5>Attendees:</h5>
+                        <ul>
+                            {{#each yeses}}
+                            <li>{{user_name}}</li>
+                            {{/each}}
+                        </ul>
+                    </div>
                 </div>
-                <div class="col border m-2 p-2">
-                    <h5>Attendees:</h5>
-                    <ul>
-                        {{#each yeses}}
-                        <li>{{user_name}}</li>
-                        {{/each}}
-                    </ul>
+                <div class="row">
+                    <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
                 </div>
-            </div>
-            <div class="row">
-                <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
             </div>
         </div>
     </div>
