--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,14 @@
     z-index: 2;
 }
 
+.hover-show {
+    display: none;
+}
+
+.hover-target:hover .hover-show{
+    display: block;
+}
+
 #upload_widget {
     background-color: black;
     margin-top: 5px;
