--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -4,7 +4,7 @@
             <h1 class="card-title my-4 text-center">{{event_name}}</h1>
             <div class="row pt-1" id="cust-detail">
                 <div class="col d-flex justify-content-end" id="cust-img">
-                    <img src={{picture_path}} width="500" height="360" alt={{picture_path}}>
+                    <img class="img-fluid" src={{picture_path}} width="500" height="360" alt={{picture_path}}>
                 </div>
                 <div class="col pt-2">
                     <div class="mb-2">
