fixed uploaded photo ratios

--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -22,7 +22,7 @@
                     <input class="form-control" id="state" value="{{eventUpdate.state}}">
                 </div>
                 <div>
-                    <img id="uploadedimage" src={{eventUpdate.picture_path}} width="500" height="360"></img>
+                    <img id="uploadedimage" src={{eventUpdate.picture_path}} width="500"></img>
                 </div>
                 <div class="mb-3">
                     <button for="formFile" id="upload_widget" class="form-label, cloudinary-button">Upload
