--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,14 +1,14 @@
 {{!-- profile page --}}
 <div class="row d-flex justify-content-center">
-    <div class="card col-12 my-5">
+    <div class="cust-card card col-12 my-5">
         <div class="card-body">
             <h1 class="card-title my-4 text-center">Welcome back, {{user.user_name}}!</h1>
             <hr>
             <div class="d-flex justify-content-center" id="profile-btns">
-                <a href="/profile/changepassword" class="btn btn-dark m-3" id="changePssword">Change Password</a>
-                <a class="btn btn-dark m-3" href="#publicEvents">My Public Events</a>
-                <a class="btn btn-dark m-3" href="#privateEvents">My Private Events</a>
-                <a class="btn btn-dark m-3" href="#invitedEvents">My Invited Events</a>
+                <a href="/profile/changepassword" class="cust-btn btn btn-dark m-3" id="changePssword">Change Password</a>
+                <a class="cust-btn btn btn-dark m-3" href="#publicEvents">My Public Events</a>
+                <a class="cust-btn btn btn-dark m-3" href="#privateEvents">My Private Events</a>
+                <a class="cust-btn btn btn-dark m-3" href="#invitedEvents">My Invited Events</a>
             </div>
         </div>
     </div>
@@ -17,7 +17,7 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="publicEvents">My Public Events</h1>
     {{#each publicEvents as |event|}}
-    <div class="card col-12 col-lg-5 mb-3 mx-3 hover-target">
+    <div class="card col-12 col-lg-5 mb-3 mx-3 hover-target cust-card cust-public">
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
@@ -60,20 +60,20 @@
                 <div class="row">
                     <div class="col">
                         <div class="d-grid gap-2 my-3">
-                            <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
-                            <button class="btn btn-dark m-1 privBtn" value={{event.id}}>Make Private</button>
+                            <a href="/eventbyid/{{id}}" class="cust-btn btn btn-dark m-1">View Details</a>
+                            <button class="cust-btn btn btn-dark m-1 privBtn" value={{event.id}}>Make Private</button>
                         </div>
                     </div>
                     <div class="col">
                         <div class="d-grid gap-2 my-3">
-                            <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
+                            <button class="cust-btn btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
                             <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-grid gap-2 mb-3">
-                        <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
+                        <a href="/profile/invite/{{id}}" class="cust-btn btn btn-dark m-1">Invite People</a>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="privateEvents">My Private Events</h1>
     {{#each privateEvents as |event|}}
-    <div class="card col-12 col-lg-5 mb-3 mx-3 hover-target">
+    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target cust-priv">
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
@@ -130,19 +130,19 @@
                 <div class="row">
                     <div class="col">
                         <div class="d-grid gap-2 my-3">
-                            <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
-                            <button class="btn btn-dark m-1 pubBtn" value={{event.id}}>Make Public</button>
+                            <a href="/eventbyid/{{id}}" class="cust-btn btn btn-dark m-1">View Details</a>
+                            <button class="cust-btn btn btn-dark m-1 pubBtn" value={{event.id}}>Make Public</button>
                         </div>
                     </div>
                     <div class="col">
                         <div class="d-grid gap-2 my-3">
-                            <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
+                            <button class="cust-btn btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
                             <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
+                    <a href="/profile/invite/{{id}}" class="cust-btn btn btn-dark m-1">Invite People</a>
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="invitedEvents">Event Invites</h1>
     {{#each invitedEvents as |event|}}
-    <div class="card col-12 col-lg-5 mb-3 mx-3 hover-target">
+    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target">
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
+                    <a href="/eventbyid/{{id}}" class="cust-btn btn btn-dark m-1">View Details</a>
                 </div>
             </div>
         </div>
