--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -39,12 +39,12 @@
             </div>
             <div class="row my-5">
                 <h2 class="text-center mb-3">Backpack Items</h2>
-                <div class="d-flex justify-content-center">
+                <div class="d-flex flex-wrap justify-content-center">
                     <hr class="my-2">
                     {{#each items}}
                     <div class="form-check form-check-inline">
                         <input class="form-check-input claimCheck" type="checkbox" id={{id}} value={{item_name}} {{#unless ../user.isGoing}}disabled{{/unless}} {{#if owner_id}} {{#if isBroughtByUser}} checked {{else}} checked disabled {{/if}}{{/if}}>
-                        <label class="form-check-label" for={{id}}>{{item_name}}{{#if owner_id}}{{#if isBroughtByUser}}{{else}}, claimed by {{user.user_name}}{{/if}}{{/if}}</label>
+                        <label class="form-check-label" for={{id}}>{{item_name}}{{#if owner_id}}{{#if isBroughtByUser}}, from <span class="fst-italic">you</span>{{else}}, from <span class="fst-italic">{{user.user_name}}</span>{{/if}}{{/if}}</label>
                     </div>
                     {{/each}}
                 </div>
