--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -48,9 +48,9 @@
             <ul>
                 {{#eventUpdate.items}}
                 <li>
+                    <img class="deleteItem" src="/images/trash.png" value={{id}} name={{event_id}} width="2%"
+                        height="2%">
                     {{item_name}}
-                    <img class="deleteItem" src="/images/close_cross_icon.png" value={{id}} name={{event_id}} width="3%"
-                        height="3%">
                 </li>
                 {{/eventUpdate.items}}
             </ul>
@@ -69,7 +69,6 @@
             <div>
 
                 {{#if eventUpdate.public}}
-                {{eventUpdate.public}}
                 <input type="radio" name="eventType" value="1" id="public" checked="checked">
                 <label for="public">Public </label>
                 <input type="radio" name="eventType" value="0" id="private">
